-------------------------------------------------------------------------------
Changes in version 1.050

- Modified all the crypto hash functions to fit a control block
  framework (like the HMAC system does).

- Added a crypto hash "lookup by name" function.

- Tweaked the hmac_finish prototype to properly indicate that the
  midstate is const and unmodified by the function.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.040

- Added cli-generate, a program to produce C header and source from
  command-line interface description files.

- Modified the crypto HMAC code to do precalculation of the intermediate
  hash results.

- Fixed base64 decoding on systems where char is unsigned by default.
  Thanks Gerrit Pape.

- Tweaked the ghash_add function to return a pointer to the newly
  created entry (since some uses will want to use it immediately).

- Stop blocking SIGSEGV with the sig_all_* functions, as this has
  resulted in bugs causing endless signal loops.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.031

- Brown paper bag release to fix missing header file for HMAC support.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.030

- Added a RFC 2104 generic HMAC (keyed hashing for message
  authentication) routine to the crypto section, with control blocks for
  MD5, SHA1, SHA256, SHA384, and SHA512.

- Added support for UID and GID names (instead of just numbers) in
  bg-installer.

Development of this version has been sponsored by FutureQuest, Inc.