@@ -1,22 +1,3 @@
-- Make all the crypto hash functions plug into a common control block.
-  - Data:
-    - block size
-    - compressed state size
-    - digest size
-  - Functions:
-    - initialize(void* state)
-    - compress(void* state, unsigned char* block)
-    - extract digest(void* state)
-  - All current hash functions use exactly the same finalization code:
-    - hash 0x80
-    - hash 0x00 until there are 64 bits left in the current block
-    - hash the 64-bit number of bits originally hashed in MSB order
-      (this will cause a final compression invocation).
-
-- Rewrite all crypto hash code in terms of the above control block.
-
-- Add hash (and hmac) lookup-by-name functions.
-
 - Rewrite the IPv6 library to accept/handle IPv4-only connections
   transparently.
   - Use a prefix of ::4444/32 to distinguish from ::ffff/32 and ::0/32
