@@ -10,6 +10,8 @@ cli-generate \- Generate source and documentation from CLI descriptions
 .B -h
 |
 .B -m
+|
+.B -w
 ]
 .I FILENAME.cli
 .SH DESCRIPTION
@@ -200,6 +202,9 @@ Output C header file.
 .TP
 .B \-m
 Output a UNIX man page.
+.TP
+.B \-w
+Output HTML (web) markup.
 .SH EXAMPLES
 Here is a sample CLI file, containing many of the described elements.
 
