@@ -4,6 +4,9 @@ Changes in version 1.050
 - Modified all the crypto hash functions to fit a control block
   framework (like the HMAC system does).
 
+- Modified cli-generate to add man page and HTML output options, and
+  more formatting commands.
+
 - Added a crypto hash "lookup by name" function.
 
 - Tweaked the hmac_finish prototype to properly indicate that the
